
0.2.2

Code changes
- moved /var/www/torrentwatch-xa to /var/www/html/torrentwatch-xa to match change from Debian 7.x to Debian 8.x
  - corrected default get_webDir() corresponding to above move

0.2.3

Functional changes
- consolidated and improved color coding in Feed List, Transmission List, and Legend
- improved Legend verbiage
- added back Transmission label to Web UI button
- added hide/show or shrink/expand UI elements depending on browser window width (does not apply to when phone.css and tablet.css are used)
- shortened text in footer for narrow screens
- lightened tints of alternating list rows
- removed cutesy icons except Transmission's from main button bar and squared off each button's corners

Code changes
- removed all code related to the unused "Report Bug" feature that was cloned from TorrentWatch-X

0.2.4

Functional changes
IN PROGRESS
- re-style all CSS following Android Material Design principles

Code changes
IN PROGRESS
- continue converting detectItem() if...else control structures to switch...case, breaking out code into separate functions
- fix 'minutes' is out of scope and similar errors with 'hours' and 'seconds' around torrentwatch-xa.js:511 to :529
- resolve collision between $torInfo in html.php and torInfo() in tools.php (latter happens only on "move torrent" button click on Transmission filter pane)
  - remove unused torInfo['status'] (meant to contain Transmission status code) from PHP code, leaving all status updates up to Javascript due to JSON
  - $torInfo has $torInfo['dlStatus'] but torInfo() has status codes
  - fixed typo of $torInfo['clientId'] in html.php
  - removed now-defined but still unused $torInfo['clientId'] in feed_item.tpl
  - fixed infoDiv's display when $torInfo is not set--now displays if $torInfo['dlStatus'] != ''
- clean up all the undefined variable PHP notices spewing into the web server error_log, especially from config_lib.php